--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,12 @@
               class="form-control">
             <span
               *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched"
-              class="help-block">Please enter a valid username!</span>
+              class="help-block">
+              <span *ngIf="signupForm.get('userData.username').errors['nameIsForbidden']">
+                This name is invalid!</span>
+              <span *ngIf="signupForm.get('userData.username').errors['required']">
+                This field is required!</span>
+            </span>
           </div>
           <div class="form-group">
             <label for="email">email</label>
@@ -45,7 +50,7 @@
           <div
             class="form-group"
             *ngFor="let hobbyControl of signupForm.get('hobbies').controls; let i = index">
-            <input type="text" class="form-control"  [formControlName]="i">
+            <input type="text" class="form-control" [formControlName]="i">
           </div>
         </div>
         <span
